--- a/responsive_web/youtube_clone/style.css
+++ b/responsive_web/youtube_clone/style.css
@@ -25,14 +25,24 @@ body {
 .video {
     display: block;
     background-color: yellow;
-    width: 500px;
+    width: 100%;
     height: 300px;
 }
 
-.container {
-    display: flex;
-    flex-direction: column;
+.container__2 {
+    display: flex;    
+    flex-direction: row;
 }
+
+.container__video__discription {
+    flex-direction: column;
+    flex-basis: 50%;
+}
+
+.container__video__list {
+    flex-basis: 50%;
+}
+
 
 .video__menu {
     display: flex;    
@@ -48,4 +58,17 @@ body {
 .video__menu div:hover {
     background-color: yellow;
     border-radius: 4px;
+}
+
+.video__list1 {
+    background-color: gray;
+    width: 100%;
+    height: 100px;
+    margin-bottom: 8px;
+}
+
+@media screen and (max-width: 768px) {
+    .container__2 {
+        flex-direction: column;
+    }       
 }
