--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -29,6 +29,7 @@
 .header {
     /* display: none; */
     position: sticky;
+    z-index: 10;
     top: 0;
     font-family: 'Roboto', sans-serif;
     display: flex;
@@ -140,14 +141,14 @@
 
 
 /* project */
-.project {
+/* .project {
     width: 100vh;
     height: 100vh;
-}
+} */
 
 .section .slidewrap {
-    width: 800px;
-    height: 600px;
+    width: 100vh;
+    height: 100vh;
     margin:0 auto;
     text-align: center;
     overflow: hidden;
@@ -161,7 +162,7 @@
 
 .section .slidewrap > input {
     position: relative;
-    top : 80%;
+    top : 5%;
     z-index: 10;
 }
 
@@ -175,13 +176,14 @@
 }
 
 .section .slidelist > li > a {
+    background-color: gray;
     display: block;
     position: relative;
 }
 
 .section .slidelist > li > a img {
-    width: 100%;
-    height: 100%;
+    width: 50%;
+    height: 50%;
 }
 
 .section .slidelist label {
@@ -196,17 +198,62 @@
 .section .slidelist .left {
     z-index: 10;
     left: 30px;
-    background:url("./image/left.svg") center center / 100% no-repeat;
+    background:url("./image/left.svg") center center / 20% no-repeat;
 }
 
 .section .slidelist .rigth {
     right: 30px;
-    background:url("./image/right.svg") center center / 100% no-repeat;
+    background:url("./image/right.svg") center center / 20% no-repeat;
 }
 
 .section .slidewrap [id="slide01"]:checked ~ .slidelist > li {transform:translateX(0%)}
 .section .slidewrap [id="slide02"]:checked ~ .slidelist > li {transform:translateX(-100%)}
 .section .slidewrap [id="slide03"]:checked ~ .slidelist > li {transform:translateX(-200%)}
+
+/* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 10; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+.modal-info1,
+.modal-info2,
+.modal-info3 {
+    display: none;
+}
+
+/* Modal Content */
+.modal-content {
+  background-color: #fefefe;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+}
+
+/* The Close Button */
+.close {
+  color: #aaaaaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}
 
 
 /* footer */
