--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -55,7 +55,7 @@ html {
     justify-content: space-between;
     background-color: gray;
     padding: calc(var(--padding-top) * 2) calc(var(--padding-side) * 2.5);
-    font-size: calc(var(--font-large) * 1.5); 
+    font-size: var(--font-large)
 }
 
 .menu {
@@ -66,10 +66,57 @@ html {
     list-style: none;
 }
 
+.menu li a:hover {
+    border-radius: 4px;
+    background-color: yellow;
+}
+
 .menu li a {
-    color: var(--white-color);
+    color: var(--dark-color);
     text-decoration: none;
-    padding-left: calc(var(--padding-side) * 2.5);
+    /* margin-left: calc(var(--padding-side) * 2.5); */
+    padding: 8px 12px;
+}
+
+.header .menu_bars {
+    display: none;
+    position: fixed;
+    right: 30px;
+}
+
+@media  screen and (max-width: 768px) {
+    .header {
+        flex-direction: column;
+    }
+
+    .header .menu_bars {
+        display: block;
+    }
+
+    .header .menu {
+        display: none;
+        flex-direction: column;
+        align-items: flex-end;
+        padding: 12px;
+        width: 100%;
+        position: fixed;
+        right: 0px;
+        top: 50px;
+        background-color: rgba(255, 255, 255, 0);
+        animation: all .5s;
+    }
+
+    .header .menu li {
+        padding: 8px;
+    }
+
+    .header .menu.active {
+        display: flex;
+    }
+
+    .header .menu_bars.active {
+        color: white;
+    }
 }
 
 /* banner */
