--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -31,13 +31,21 @@ html {
 
 .topBtn {
     display: flex;
+    width: 50px;
+    height: 50px;
     flex-direction: column;
-    align-items: flex-end;
-    justify-content: center;
-    position: sticky;
-    right: 0;
+    align-items: center;
+    position: fixed;
+    right: 50px;
+    bottom: 50px;
     padding: 8px 12px;
     font-size: 24px;
+    border: 1px solid #000;
+    border-radius: 50%;
+}
+
+.topBtn:hover {
+    background-color: rgba(0, 0, 0, 0.3);
 }
 
 .topBtn span {
