--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -32,7 +32,7 @@ html {
 .topBtn {
     display: flex;
     width: 50px;
-    height: 50px;
+    height: 55px;
     flex-direction: column;
     align-items: center;
     position: fixed;
@@ -40,8 +40,13 @@ html {
     bottom: 50px;
     padding: 8px 12px;
     font-size: 24px;
-    border: 1px solid #000;
+    border: 1px solid rgba(0, 0, 0, 0.3);
     border-radius: 50%;
+}
+
+.topBtn div {
+    padding-top: 5px;
+    flex-grow: 1;
 }
 
 .topBtn:hover {
@@ -68,6 +73,7 @@ html {
 
 .menu {
     display: flex;
+    animation: all .5s;
 }
 
 .menu li {
@@ -102,16 +108,16 @@ html {
     }
 
     .header .menu {
-        display: none;
+        opacity:0;
         flex-direction: column;
         align-items: flex-end;
         padding: 12px;
         width: 100%;
         position: fixed;
         right: 0px;
-        top: 50px;
+        top: -200px;
         background-color: rgba(255, 255, 255, 0);
-        animation: all .5s;
+        transition: all 0.6s ease-in-out;
     }
 
     .header .menu li {
@@ -119,7 +125,8 @@ html {
     }
 
     .header .menu.active {
-        display: flex;
+        opacity: 1;
+        transform: translateY(250px);
     }
 
     .header .menu_bars.active {
@@ -143,19 +150,13 @@ html {
 
 .banner .typing {
     font-family: 'Roboto', sans-serif;
-    font-size: calc(var(--font-large) * 2.5);
+    font-size: 3vw;
     /* transform: translateY(-50px);     */
     /* margin:0 auto; */
     /* height: calc(var(--font-large) * 2.5); */
     animation-name: cursor; 
     animation-duration: 0.7s; 
     animation-iteration-count: infinite;    
-}
-
-@media screen and (max-width: 850px) {
-    .banner .typing {
-        font-size: calc(var(--font-large) * 1.5);
-    }
 }
 
 @keyframes cursor {
@@ -166,15 +167,15 @@ html {
 
 /* introduce */
 .introduce {
-    width: 100vh;
+    width: 100vw;
     height: 100vh;
     display: flex;
 }
 
 .introduce .introduce__image img {
     border-radius: 50%;
-    width: 100%;
-    height: 100%;
+    width: 30vw;
+    height: 30vh;
 }
 
 
@@ -185,11 +186,24 @@ html {
 
 /* skill */
 .skill {
-    width: 100vh;
+    width: 100vw;
     height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 32px;
 }
 
-.skill .backEnd{
+.skill div i {
+    width: 35px;
+    height: 35px;
+    padding: 8px 12px;
+    border: 1px solid #000;
+    border-radius: 8px;
+    font-size: 32px;
+}
+
+/* .skill .backEnd{
     background-color: blue;
     border-radius: 50%;
     width: 250px;
@@ -208,18 +222,18 @@ html {
     border-radius: 50%;
     width: 250px;
     height: 250px;
-}
+} */
 
 
 
 /* project */
 /* .project {
-    width: 100vh;
+    width: 100vw;
     height: 100vh;
 } */
 
 .section .slidewrap {
-    width: 100vh;
+    width: 100vw;
     height: 100vh;
     margin:0 auto;
     text-align: center;
