--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -30,6 +30,8 @@ html {
 }
 
 .topBtn {
+    /* display: none; */
+    opacity: 0;
     display: flex;
     width: 50px;
     height: 55px;
@@ -42,6 +44,7 @@ html {
     font-size: 24px;
     border: 1px solid rgba(0, 0, 0, 0.3);
     border-radius: 50%;
+    transition: all 0.5s ease-in-out;
 }
 
 .topBtn div {
