--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -69,7 +69,7 @@ html {
     font-family: 'Roboto', sans-serif;
     display: flex;
     justify-content: space-between;
-    background-color: gray;
+    background-color: rgba(0, 0, 0, 0.3);
     padding: calc(var(--padding-top) * 2) calc(var(--padding-side) * 2.5);
     font-size: var(--font-large)
 }
@@ -89,9 +89,8 @@ html {
 }
 
 .menu li a {
-    color: var(--dark-color);
+    color: white;
     text-decoration: none;
-    /* margin-left: calc(var(--padding-side) * 2.5); */
     padding: 8px 12px;
 }
 
@@ -125,6 +124,13 @@ html {
 
     .header .menu li {
         padding: 8px;
+        
+    }
+
+    .menu li a {
+        color: rgba(0, 0, 0, 0.3);
+        text-decoration: none;
+        padding: 8px 12px;
     }
 
     .header .menu.active {
@@ -195,6 +201,11 @@ html {
     flex-direction: column;
     align-items: center;
     padding-top: 32px;
+}
+
+.skill h1 {
+    text-align: center;
+    padding: 8px;
 }
 
 .skill div i {
