--- a/portfolio/ver2/style.css
+++ b/portfolio/ver2/style.css
@@ -176,7 +176,65 @@ li {
 .skill { 
     height: 100vh;
     background-color: #78909c;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
+
+.skill > h1 {
+    padding-top: 10vh;
+}
+
+.skill > div {
+    padding: calc(var(--padding-top) * 3);
+}
+
+.skill .title {
+    text-align: center;
+    font-size: calc(var(--font-large) * 1.5);
+}
+
+.skill .stackList {
+    display: flex;
+    justify-content: center;
+}
+
+.skill .stackList li {
+    position: relative;
+    padding: var(--padding-top) var(--padding-side);
+    overflow: hidden;
+}
+
+.skill .stackList i {
+    text-align: center;
+    padding: 8px 8px;
+    border: 1px solid white;
+    border-radius: 4px;
+    font-size: calc(var(--font-large) * 2);
+    color: var(--white-color);
+    width: 45px;
+}
+
+.skill .stackList .captin {
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    height: 54px;
+    top: 63px;
+    width: 63px;
+    opacity: 0;
+    background-color: rgba(0, 0, 0, 0.3);
+    border-radius: 4px;
+    color: var(--white-color);
+    transition: all .5s;
+}
+
+.stackList li:hover .captin {
+    opacity: 1;
+    transform: translateY(-54px);
+}
+
 
 /* project */
 .project {
