--- a/portfolio/ver2/style.css
+++ b/portfolio/ver2/style.css
@@ -187,6 +187,7 @@ li {
     background-image: url(./image/user_img.jpg);
     background-repeat: no-repeat;
     background-size: contain;
+    background-position: center center;
     margin: 10px;
 }
 
@@ -204,9 +205,26 @@ li {
     text-align: center;
 }
 
+@media screen and (max-width: 768px) {
+    .aboutMe .content {
+        height: 100%;
+        flex-direction: column;
+    }
+
+    .aboutMe .content .my_image {
+        flex-grow: 1;
+    }
+
+    .aboutMe .content .info {
+        flex-grow: 0;
+        margin: 10px;
+    }
+}
+
 
 /* skill */
 .skill { 
+    width: 100vw;
     height: 100vh;
     background-color: #78909c;
     display: flex;
@@ -219,7 +237,7 @@ li {
 }
 
 .skill > div {
-    padding: calc(var(--padding-top) * 3);
+    padding: 3vh;
 }
 
 .skill .title {
@@ -268,6 +286,15 @@ li {
     transform: translateY(-54px);
 }
 
+@media screen and (max-width: 768px) {
+    .stack_container {
+        display: flex;
+    }
+
+    .stack_container > div {
+        padding: 5vw;
+    }
+}
 
 /* project */
 .project {
@@ -347,16 +374,12 @@ li {
 
 /* foooter */
 .footer { 
-    height: 30vh;
+    height: 40vh;
     background-color: #4b636e;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
- }
-
- .footer .contect_list {
-     padding: 12px;
  }
 
  .footer li {
@@ -366,19 +389,20 @@ li {
 
  .footer i {
     color: var(--white-color);
-    font-size: calc(var(--font-large) * 2); 
+    font-size: 2vw; 
  }
 
  .footer .contect_icons {
      display: flex;
+     justify-content: space-evenly;
  }
 
  .footer p {
-     margin: var(--padding-top);
+     margin: 2vh;
      color: var(--white-color);
  }
 
  .footer span {
-     font-size: 5vw;
+     font-size: 3vw;
  }
 
