--- a/portfolio/ver2/style.css
+++ b/portfolio/ver2/style.css
@@ -224,7 +224,7 @@ li {
 
 /* skill */
 .skill { 
-    width: 100vw;
+    /* width: 100vw; */
     height: 100vh;
     background-color: #78909c;
     display: flex;
@@ -381,6 +381,54 @@ li {
     .project .slideWrab {
         width: 90%;
     }
+}
+
+/* modal */
+.modal {    
+    position: fixed;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.3);
+    z-index: -1;    
+    opacity: 0;
+    transition: all 1s;
+}
+
+.modal.active {
+    opacity: 1;
+    z-index: 30;
+}
+
+.modal_content {
+    position: absolute;
+    top: 20vh;
+    display: flex;    
+    left: calc((100% - 60% - 10%) / 2);
+    background-color: var(--white-color);
+    padding: 5%;
+    width: 60%;    
+    border-radius: 1vw;
+}
+
+.modal_content .modalContent {
+    flex-grow: 1;    
+}
+
+.modal .modalContent .title {
+    text-align: center;
+    padding: 3vh;
+}
+
+.modal i {
+    margin-top: 3vh;    
+    color: rgba(0, 0, 0, 0.6);    
+    transition: all .5s;
+}
+
+.modal i:hover {
+    color: rgb(0, 0, 0);
+    transform: scale(1.2);
 }
 
 /* foooter */
