--- a/portfolio/ver2/style.css
+++ b/portfolio/ver2/style.css
@@ -184,10 +184,10 @@ li {
 .aboutMe .content .my_image {
     flex-grow: 1;
     min-width: 300px;
-    background-image: url(./image/user_img.jpg);
+    background-image: url(./image/user_image.jpg);
     background-repeat: no-repeat;
     background-size: contain;
-    background-position: center center;
+    background-position: center top;
     margin: 10px;
 }
 
@@ -212,11 +212,11 @@ li {
     }
 
     .aboutMe .content .my_image {
-        flex-grow: 1;
+        flex-grow: 1.5;
     }
 
     .aboutMe .content .info {
-        flex-grow: 0;
+        flex-grow: 0.5;
         margin: 10px;
     }
 }
@@ -233,11 +233,11 @@ li {
 }
 
 .skill > h1 {
-    padding-top: 10vh;
+    padding: 10vh;
 }
 
-.skill > div {
-    padding: 3vh;
+.skill .stack_container {
+    padding: 0 3vh;
 }
 
 .skill .title {
@@ -294,7 +294,7 @@ li {
     .stack_container {
         height: 100%;
         display: flex;
-        align-items: center;
+        align-items: flex-start;
     }
 
     .stack_container > div {
@@ -386,6 +386,9 @@ li {
 /* modal */
 .modal {    
     position: fixed;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     top: 0;
     width: 100%;
     height: 100%;
@@ -401,10 +404,7 @@ li {
 }
 
 .modal_content {
-    position: absolute;
-    top: 5vw;
-    display: flex;    
-    left: calc((100% - 60% - 10%) / 2);
+    display: flex;
     background-color: var(--white-color);
     padding: 5%;
     width: 60%;    
@@ -428,7 +428,7 @@ li {
 
 .modalContent .modal_image {
     min-height: 25vw;
-    background-image: url(./image/project1.png);
+    background-image: url(./image/ToDoList.gif);
     background-repeat: no-repeat;
     background-size: contain;
     background-position: center center;
@@ -447,7 +447,7 @@ li {
 
 /* foooter */
 .footer { 
-    height: 40vh;
+    height: 40vw;
     background-color: #4b636e;
     display: flex;
     flex-direction: column;
@@ -457,7 +457,7 @@ li {
 
  .footer li {
     text-align: center;
-    /* margin: calc(var(--padding-top) * 2); */
+    margin: 1vw;
  }
 
  .footer i {
@@ -471,12 +471,13 @@ li {
  }
 
  .footer p {
-     margin: 1vh;
+     font-size: 2vw;
+     margin: 1vw;
      color: var(--white-color);
  }
 
  .footer span {
-     padding-bottom:5vh;
+     padding-bottom:5vw;
      font-size: 5vw;
  }
 
