--- a/portfolio/ver2/style.css
+++ b/portfolio/ver2/style.css
@@ -21,16 +21,19 @@
 
 /* 공통 CSS */
 * {
+    box-sizing: border-box;
     margin: 0;
-    padding: 0;
+    padding: 0;    
 }
 
-html {
+html {     
+    /* min-width: 320px; */
     overflow-x: hidden;
     scroll-behavior: smooth;
 }
 
 body {
+    /* width: 100vw; */
     font-family: 'Roboto';
 }
 
@@ -68,6 +71,7 @@ li {
 
 /* header */
 .header {
+    width: 100%;
     position: sticky;
     top: 0;
     display: flex;
@@ -141,6 +145,7 @@ li {
 
 /* banner */
 .banner {
+    width: 100vw;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -188,7 +193,7 @@ li {
 .aboutMe .content .my_image {
     flex-grow: 1;
     min-width: 300px;
-    width: 100%;
+    /* width: 100%; */
     background-image: url(./image/user1.jpg);
     background-repeat: no-repeat;
     background-size: contain;
@@ -197,20 +202,25 @@ li {
 }
 
 .aboutMe .content .info { 
-    color: white; 
-    font-size: var(--font-large);
-    flex-grow: 1.5;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    padding: 1vw;
+    flex-grow: 1;
+    display: flex;    
 }
 
-.aboutMe .content .info li {
-    padding-bottom: calc(var(--padding-top) * 3);
+.persnal_info {
+    flex-grow: 0.5;
 }
 
-.aboutMe h1 {
+.certification_info {    
+    flex-grow: 1;
+    text-align: center;
+}
+
+.certification_info li {
+    padding-bottom: 2vh;
+}
+
+.aboutMe > span {
+    font-size: 4vw;
     padding: 10vh;
     text-align: center;
 }
@@ -506,7 +516,7 @@ li {
 
 /* foooter */
 .footer { 
-    height: 40vw;
+    height: 300px;
     background-color: #4b636e;
     display: flex;
     flex-direction: column;
