complete CSS of About Me

--- a/portfolio/ver2/style.css
+++ b/portfolio/ver2/style.css
@@ -186,42 +186,67 @@ li {
 }
 
 .aboutMe .content {
+    /* width: 100%; */
     display: flex;
     height: 55vh;
 }
 
 .aboutMe .content .my_image {
-    flex-grow: 1;
-    min-width: 300px;
+    flex-basis: 33%;
+    /* min-width: 300px; */
     /* width: 100%; */
-    background-image: url(./image/user1.jpg);
+    /* background-image: url(./image/user1.jpg);
     background-repeat: no-repeat;
     background-size: contain;
-    background-position: center top;
-    margin: 1vw;
+    background-position: center top; */
+    /* margin: 1vw; */
+    /* margin: 0 auto; */
+    text-align: center;
+    vertical-align: middle;
+    padding-top: 2vw;
+}
+
+.aboutMe .content img {    
+    width: 300px;
+    height: 400px;
 }
 
 .aboutMe .content .info { 
-    flex-grow: 1;
+    /* flex-grow: 1; */
+    padding-top: 2vw;
+    flex-basis: 66%;
     display: flex;    
+    font-size: 1vw;
+}
+
+.aboutMe .content .info span {    
+    font-size: 2.5vw;
+    text-align: center;    
 }
 
 .persnal_info {
-    flex-grow: 0.5;
+    text-align: center;
+    /* flex-grow: 1;     */
+    flex-basis: 50%;
+}
+
+.persnal_info li {
+    padding: 2vh;
 }
 
 .certification_info {    
-    flex-grow: 1;
+    /* flex-grow: 1; */
+    flex-basis: 50%;
     text-align: center;
 }
 
 .certification_info li {
-    padding-bottom: 2vh;
+    padding: 2vh;
 }
 
 .aboutMe > span {
     font-size: 4vw;
-    padding: 10vh;
+    padding: 5vw;
     text-align: center;
 }
 
@@ -232,13 +257,18 @@ li {
     }
 
     .aboutMe .content .my_image {
-        flex-grow: 1.5;
+        flex-grow: 0;
     }
 
-    .aboutMe .content .info {
+    /* .aboutMe .content .info {
         flex-grow: 0.5;
         margin: 10px 50px;
         font-size: var(--font-small);
+    } */
+
+    .aboutMe .content img {    
+        width: 150px;
+        height: 200px;
     }
 }
 
