--- a/portfolio/ver2/style.css
+++ b/portfolio/ver2/style.css
@@ -188,7 +188,7 @@ li {
 
 .aboutMe li {
     margin: 3px;
-    border-bottom: 1px solid gray;
+    /* border-bottom: 1px solid gray; */
 }
 
 .aboutMe .content {
@@ -218,7 +218,7 @@ li {
 
 .aboutMe .content .info { 
     /* flex-grow: 1; */
-    padding-top: 2vw;
+    padding: 10px;
     flex-basis: 66%;
     display: flex;    
     font-size: 1vw;
@@ -235,7 +235,7 @@ li {
     align-items: center;
     width: 100%;      
     height: 30px;
-    background: #000; 
+    background: rgba(0, 0, 0, 0.6);
     color: #fff; 
     box-sizing: border-box;
     padding: 0 10px;
@@ -244,16 +244,24 @@ li {
 }
 
 .aboutMe .info .con {
-    transition: all 0.5s;
-    /* padding: 20px;  */
-    /* display:none; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
     height: 0;
     overflow: hidden;
+    transition: all 0.5s;
+}
+
+.aboutMe .info ul.con {
+    display: flex;
+    flex-direction: column;    
 }
 
 .aboutMe .info .con.active {
     /* display:block; */
-    height: 100%;
+    height: 65px;
+    padding: 10px;
+    /* height: 100%; */
 }
 
 .persnal_info {
@@ -273,7 +281,7 @@ li {
 }
 
 .certification_info li {
-    padding: 2vh;
+    padding: 3px;
 }
 
 .aboutMe > span {
@@ -613,13 +621,13 @@ li {
 
 /* foooter */
 .footer { 
-    height: 20vw;
+    /* height: 20vw; */
     background-color: #4b636e;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    /* padding-top: 3vw; */
+    padding: 20px;
  }
 
  .footer li {
@@ -648,7 +656,7 @@ li {
 
  .footer .title {
      flex-basis: 50%;
-     /* padding-top:1vw; */
+     padding-bottom: 20px;
      font-size: 4vw;
      display: flex;
      align-items: center;     
@@ -667,3 +675,6 @@ li {
     justify-content: center;    
  }
 
+.footer .contect_list li {
+    padding: 5px;
+}
