--- a/portfolio/ver2/style.css
+++ b/portfolio/ver2/style.css
@@ -27,13 +27,11 @@
 }
 
 html {     
-    /* min-width: 320px; */
     overflow-x: hidden;
     scroll-behavior: smooth;
 }
 
 body {
-    /* width: 100vw; */
     font-family: 'Roboto';
 }
 
@@ -144,11 +142,9 @@ li {
 
 /* banner */
 .banner {
-    /* width: 100vw; */
     display: flex;
     justify-content: center;
     align-items: center;
-    /* width: 100vw; */
     height: 100vh;
     background-color: #78909c;        
 }
@@ -180,33 +176,21 @@ li {
     background-color: #a7c0cd;
 }
 
-/* .aboutMe ul {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-} */
-
 .aboutMe li {
     margin: 3px;
-    /* border-bottom: 1px solid gray; */
 }
 
 .aboutMe .content {
-    /* width: 100%; */
     display: flex;
     height: 55vh;
 }
 
 .aboutMe .content .my_image {
     flex-basis: 33%;
-    /* min-width: 300px; */
-    /* width: 100%; */
     background-image: url(./image/user1.jpg);
     background-repeat: no-repeat;
     background-size: contain;
     background-position: center top;
-    /* margin: 1vw; */
-    /* margin: 0 auto; */
     text-align: center;    
     padding-top: 2vw;
 }
@@ -217,7 +201,6 @@ li {
 }
 
 .aboutMe .content .info { 
-    /* flex-grow: 1; */
     padding: 10px;
     flex-basis: 66%;
     display: flex;    
@@ -258,30 +241,18 @@ li {
 }
 
 .aboutMe .info .con.active {
-    /* display:block; */
     height: 65px;
     padding: 10px;
-    /* height: 100%; */
 }
 
 .persnal_info {
     text-align: center;
-    /* flex-grow: 1;     */
     flex-basis: 50%;
 }
-
-/* .persnal_info li {
-    padding: 2vh;
-} */
 
 .certification_info {    
-    /* flex-grow: 1; */
     flex-basis: 50%;
     text-align: center;
-}
-
-.certification_info li {
-    padding: 3px;
 }
 
 .aboutMe > span {
@@ -429,28 +400,31 @@ li {
 }
 
 /* project */
-.project {
-    /* display: flex;
+.project {    
+    display: flex;
+    flex-direction: column;
     justify-content: center;
-    align-items: center; */
+    align-items: center;
     height: 100vh;
     background-color: #a7c0cd;
-    text-align: center;
-    padding-top: 5vw;
+    text-align: center;    
 }
 
 .project span {
-    font-size: 4vw;
-    padding: 5vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 4vw;    
+    flex-basis: 20%;
     
 }
 
 .project .slideWrab {
-    width: 60vw;
-    /* height: 100%; */
-    margin: 0 auto;
-    padding-top: 3%;
-    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;    
+    flex-basis: 80%;
     overflow: hidden;
 }
 
@@ -519,7 +493,7 @@ li {
 }
 
 .project .slideList img {
-    width: 100%;
+    width: 80%;
     height: 100%;
 }
 
@@ -621,7 +595,6 @@ li {
 
 /* foooter */
 .footer { 
-    /* height: 20vw; */
     background-color: #4b636e;
     display: flex;
     flex-direction: column;
@@ -633,7 +606,6 @@ li {
  .footer li {
     flex-basis: 50%;
     text-align: center;
-    /* margin: 1vw; */
  }
 
  .footer i {
@@ -650,7 +622,6 @@ li {
 
  .footer p {
      font-size: 1vw;
-     /* padding: 1vw; */
      color: var(--white-color);
  }
 
